# emjc

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: emjc_bench.rs
benches/resources/: Factorial.ast  GottshallJustinMergeSort.emj  GottshallJustinPrimes.emj  HansenSarathiFibonacci.emj  HansenSarathiMergeSort.emj  KalbhorBalvantHeapsort.emj  KalbhorBalvantKSelect.emj  LinkedList.ast  LoganThomasArrayFold.ast  LoganThomasArrayFold.emj  LoganThomasListSort.emj  MansfieldBrianBindingTightness.emj  MansfieldBrianOpPrecedence.emj  SmithWilliamMethodOverriding.emj  SmithWilliamQuicksort.emj  Test.emj
src/: emj_grammar.rs  lexer.rs  lib.rs  parser.rs  semantics.rs
src/codegen/: cfg_codegen.rs  generator.rs  mod.rs
src/control_flow/: deadvar_elimination.rs  graph_writer.rs  mod.rs
src/optimization/: deadvar_elimination.rs  graph_writer.rs  mod.rs
src/parser/: ast.rs  mod.rs  recursive_parser.rs  stack_parser.rs  visitor.rs
src/parser/visitor/: mod.rs  printer.rs
src/semantics/: mod.rs  name_analysis.rs  name_analyzer.rs  pretty_printer.rs  type_analysis.rs
src/syntax/: ast.rs  recursive_parser.rs
src/syntax/visitor/: mod.rs  printer.rs
