[package]
name = "emjc"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]

[dependencies]
clap = "2.29.2"
log = "0.4.1"
simplelog = "0.5.0"
failure = "0.1.1"
regex = "0.2"
lazy_static = "1.0.0"
env_logger = "0.5.3"
tendril = "0.4.0"
uuid = { version = "0.6.2", features = ["v4"] }
itertools = "0.7.8"

[[bin]]
name = "emjc"
path = "src/bin/main.rs"

[lib]
name = "emjc_lib"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.2.0"

[[bench]]
name = "emjc_bench"
harness = false
